feat: Rewrote existing requirement summaries from V1.1.1 - V2.1.12 and refactored `requirements-search-input`
- refactored `requirements-search-input` with added keybinding to focus
  on search input and escape to exit.
- add `asvs-list` component and is composed inside the `Home` component
  page so that the Home component can stay a server component

--- a/public/docs/asvs/403/V1.1.2.md
+++ b/public/docs/asvs/403/V1.1.2.md
@@ -1,41 +1,25 @@
-# Threat Modeling for Design Changes
+*V1.1 Secure Software Development Lifecycle*
+
+# Threat Modeling
 
 > Verify the use of threat modeling for every design change or sprint planning to identify threats, plan for countermeasures, facilitate appropriate risk responses, and guide security testing.
 
 ## Objective
-Incorporate threat modeling into the development process to proactively identify and mitigate potential security threats, ensuring that security considerations are addressed during design changes or sprint planning.
+The objective of this requirement is to ensure that potential security threats are identified and addressed during the design and planning phases of development. This proactive approach helps teams anticipate and mitigate risks before they can be exploited in production.
 
 ## Rationale
-Threat modeling helps in understanding the security implications of design changes and new features. By identifying potential threats early, teams can plan appropriate countermeasures and guide security testing efforts effectively. This proactive approach minimizes security risks and ensures that security is integrated into the development lifecycle.
-
-**Key Points**:
-- **Identify Threats**: Understand the potential security threats associated with design changes or new features.
-- **Plan Countermeasures**: Develop strategies to mitigate identified threats.
-- **Facilitate Risk Responses**: Implement appropriate measures to respond to security risks.
-- **Guide Security Testing**: Ensure that security testing efforts are aligned with identified threats and risk responses.
+By incorporating threat modeling into the development lifecycle, organizations can:
+- Identify vulnerabilities early in the design phase, reducing the cost and effort required to fix them later.
+- Enhance the understanding of potential attack vectors and how they can be mitigated.
+- Ensure that security is considered an integral part of the design and development process.
+- Facilitate better communication among team members regarding security concerns and solutions.
 
 ## Practical Example
-Imagine a team is adding a new user authentication feature to their application. They would perform threat modeling during the design phase to identify potential security threats associated with this new feature. Through this process, they might identify threats such as:
+A development team might conduct a threat modeling session at the beginning of a sprint. They would:
+- Create data flow diagrams to map out how data moves through the system.
+- Identify trust boundaries where data moves between different security domains.
+- Brainstorm potential threats, such as SQL injection or cross-site scripting, and document them.
+- Plan countermeasures, such as input validation and output encoding, to mitigate identified threats.
+- Use the findings to guide the security testing efforts, ensuring that specific threats are tested for during quality assurance.
 
-- **Threat**: Brute force attacks on user passwords.
-  - **Countermeasure**: Implement rate limiting and account lockout mechanisms.
-- **Threat**: Credential stuffing attacks.
-  - **Countermeasure**: Use multi-factor authentication (MFA) and monitor for unusual login patterns.
-- **Threat**: Man-in-the-middle attacks during authentication.
-  - **Countermeasure**: Ensure all communication is encrypted using TLS.
-
-By identifying these threats early, the team can incorporate these countermeasures into their design and guide their security testing efforts to ensure these threats are mitigated effectively.
-
-## Threat Modeling Methodologies
-- STRIDE
-- DREAD
-- PASTA
-- LINDDUN
-- OCTAVE
-
-By using these methodologies, the development team can systematically identify and address security threats, ensuring the new authentication feature is robust and secure. Read more about threat modeling on [OWASP's Threat Modeling Cheat Sheet](https://cheatsheetseries.owasp.org/cheatsheets/Threat_Modeling_Cheat_Sheet.html).
-
-## OWASP Cheat Sheet for Secure Software Development Lifecyle Requirements
-- [Threat Modeling Cheat Sheet](https://cheatsheetseries.owasp.org/cheatsheets/Threat_Modeling_Cheat_Sheet.html)
-- [Abuse Case Cheat Sheet](https://cheatsheetseries.owasp.org/cheatsheets/Abuse_Case_Cheat_Sheet.html)
-- [Attack Surface Analysis Cheat Sheet](https://cheatsheetseries.owasp.org/cheatsheets/Attack_Surface_Analysis_Cheat_Sheet.html)
+This process helps ensure that security considerations are embedded into the development process, leading to more robust and secure applications.
