--- a/public/docs/asvs/403/V1.1.3.md
+++ b/public/docs/asvs/403/V1.1.3.md
@@ -1,21 +1,27 @@
-# Functional Security Constraints in User Stories
+*V1.1 Secure Software Development Lifecycle*
+
+# Functional Security Constraints
 
 > Verify that all user stories and features contain functional security constraints, such as "As a user, I should be able to view and edit my profile. I should not be able to view or edit anyone else's profile."
 
 ## Objective
-Ensure that security considerations are included in user stories and features, specifying what users can and cannot do to protect against unauthorized access and actions.
+The objective of this requirement is to ensure that security constraints are explicitly defined and integrated into the development process. This ensures that features are developed with security considerations in mind, preventing unauthorized actions and access.
 
 ## Rationale
-Including functional security constraints in user stories helps developers and testers understand the security requirements and implement appropriate controls. It ensures that security is considered from the beginning and that features are designed to prevent unauthorized actions and access.
+By embedding functional security constraints into user stories and features, organizations can:
+- Ensure that security requirements are considered during the design and implementation phases.
+- Prevent common security issues such as unauthorized data access or modifications.
+- Facilitate clearer communication among team members regarding security expectations for each feature.
+- Enhance the overall security posture of the application by making security an integral part of the development process.
 
 ## Practical Example
-A user story for a profile management feature might include:
-- **User Story**: As a user, I should be able to view and edit my profile information.
-- **Functional Security Constraint**: I should not be able to view or edit the profile information of other users.
+An example of a functional security constraint in a user story might be:
+- "As a user, I should be able to view and edit my profile. I should not be able to view or edit anyone else's profile."
+- "As an admin, I should be able to manage user accounts, but regular users should not have access to admin functionalities."
 
-By specifying this constraint, developers know to implement access controls that restrict profile viewing and editing to the profile owner only.
+To implement these constraints, developers can:
+- Use role-based access control (RBAC) to define and enforce permissions for different user roles.
+- Implement access control checks within the application code to ensure that users can only perform actions that they are authorized to do.
+- Incorporate these constraints into acceptance criteria for user stories to ensure they are verified during testing.
 
-## Key Takeaways
-- Integrate functional security constraints in all user stories and features.
-- Clearly specify what actions users can and cannot perform to prevent unauthorized access.
-- Including security constraints from the beginning helps ensure secure design and implementation.
+By integrating these functional security constraints into the development lifecycle, teams can proactively address potential security issues and build more secure applications.
