--- a/public/docs/asvs/403/V1.1.4.md
+++ b/public/docs/asvs/403/V1.1.4.md
@@ -1,17 +1,24 @@
-# Documentation of Trust Boundaries
+*V1.1 Secure Software Development Lifecycle*
+
+# Trust Boundaries Documentation
 
 > Verify documentation and justification of all the application's trust boundaries, components, and significant data flows.
 
 ## Objective
-Ensure that the application’s trust boundaries, key components, and data flows are well-documented and justified to understand and manage security risks effectively.
+The objective of this requirement is to ensure that all trust boundaries within the application are clearly documented and justified. This documentation helps in understanding the security implications of data flows and interactions between different components, enabling better risk management and implementation of security controls.
 
 ## Rationale
-Documenting trust boundaries, components, and data flows helps in identifying potential security risks and designing appropriate controls. It provides a clear understanding of where sensitive data is processed and transmitted, which is crucial for protecting it against unauthorized access and ensuring secure communication between different parts of the application.
+Documenting and justifying trust boundaries is crucial because:
+- It provides a clear understanding of where sensitive data transitions between different security domains.
+- It helps identify potential security risks associated with these transitions.
+- It ensures that appropriate security measures are in place to protect data as it moves across trust boundaries.
+- It facilitates communication and understanding among development, security, and operations teams regarding the security architecture of the application.
 
 ## Practical Example
-For an application that handles user data and interacts with external services, documentation might include:
-- **Trust Boundaries**: Define the boundaries between the internal network and the external network where data enters or leaves the system.
-- **Components**: List all major components such as web servers, databases, and third-party services.
-- **Data Flows**: Illustrate how data moves between components, including where encryption is used and where sensitive data is stored or processed.
+An example of documenting trust boundaries might include:
+- Creating detailed architecture diagrams that highlight all components of the application and the trust boundaries between them.
+- Justifying why certain components are placed in specific security domains, such as separating the web server from the database server.
+- Describing how data flows between these components, including any encryption or authentication measures in place to secure the data during transit.
+- Regularly reviewing and updating this documentation to reflect any changes in the application's architecture or security posture.
 
-By maintaining this documentation, the development and security teams can better manage and mitigate security risks, ensuring that all parts of the application are adequately protected.
+By maintaining comprehensive documentation of trust boundaries, organizations can more effectively manage security risks and ensure that appropriate controls are implemented to protect sensitive data.
