--- a/public/docs/asvs/403/V1.2.3.md
+++ b/public/docs/asvs/403/V1.2.3.md
@@ -1,17 +1,26 @@
-# Single Vetted Authentication Mechanism
+*V1.2 Authentication Architecture*
 
-> Verify that the application uses a single vetted authentication mechanism that is known to be secure, can be extended to include strong authentication, and has sufficient logging and monitoring to detect account abuse or breaches.
+# Service Authentication
+
+> Verify that service accounts for components and services do not share credentials. Each service should have a distinct set of credentials.
 
 ## Objective
-Ensure the application uses a secure, reliable authentication mechanism that supports strong authentication methods and has capabilities to detect and respond to potential security incidents.
+The objective of this requirement is to ensure that each service and component within an application has unique credentials. This practice helps isolate services, preventing a compromise in one area from affecting others.
 
 ## Rationale
-Using a single vetted authentication mechanism simplifies the security architecture and ensures that authentication processes are consistent and robust. A well-tested and secure authentication mechanism reduces the risk of vulnerabilities and can be easily extended to incorporate stronger authentication methods like multi-factor authentication (MFA). Additionally, having sufficient logging and monitoring helps detect and mitigate account abuse or breaches in real-time, enhancing the overall security posture of the application.
+Using unique credentials for each service and component helps to:
+- Limit the scope of damage if credentials are compromised.
+- Prevent lateral movement within the network by attackers.
+- Facilitate auditing and tracking of service access and actions.
+- Enhance overall security by ensuring that each service has its own secure access credentials.
 
-**Key Points**:
-- **Consistency**: A single authentication mechanism ensures uniform security controls across the application.
-- **Security**: Vetted mechanisms are thoroughly tested, reducing the risk of vulnerabilities.
-- **Extensibility**: The ability to add stronger authentication methods as needed.
-- **Monitoring**: Sufficient logging and monitoring to detect and respond to security incidents.
+## Practical Example
+To meet this requirement, an organization might:
+- Ensure that each microservice in an application has a unique username and password.
+- Use a secrets management system to securely store and manage these credentials.
+- Regularly rotate and audit the credentials for each service to ensure they remain secure.
+- Implement automated mechanisms to update credentials across services and components without manual intervention.
 
-By implementing a single vetted authentication mechanism, organizations can ensure that their authentication processes are secure, scalable, and capable of detecting potential security threats effectively.
+For instance, if an application has multiple microservices interacting with a central database, each microservice should have its own database credentials. These credentials should be stored securely using a secrets management tool, and access should be granted based on the principle of least privilege, ensuring that each microservice can only access the data it needs.
+
+By implementing these practices, organizations can enhance the security of their authentication architecture, making it more robust and resilient to attacks.
