--- a/public/docs/asvs/403/V1.2.4.md
+++ b/public/docs/asvs/403/V1.2.4.md
@@ -1,22 +1,26 @@
-# Consistent Authentication Security Controls
+*V1.2 Authentication Architecture*
 
-> Verify that all authentication pathways and identity management APIs implement consistent authentication security control strength, ensuring no weaker alternatives per the risk of the application.
+# Auditing Credential Changes
+
+> Verify that all credential changes are subject to logging and review, including login events, failed login events, changes to credentials, and failed attempts to change credentials.
 
 ## Objective
-Ensure that all authentication methods and identity management APIs maintain a consistent level of security, eliminating weaker authentication paths that could be exploited by attackers.
+The objective of this requirement is to ensure that all credential changes are thoroughly audited. This includes logging all related events and making these logs available for review. This helps in detecting unauthorized access attempts and ensuring accountability.
 
 ## Rationale
-Consistent authentication security controls across all pathways and APIs prevent attackers from finding and exploiting weaker entry points into the system. This uniformity ensures that the highest security standards are applied universally, reducing the risk of unauthorized access. If different parts of the system use varying levels of security, attackers may target the weakest link. By ensuring that all authentication mechanisms are equally robust, the overall security posture of the application is strengthened.
+Auditing credential changes helps organizations:
+- Detect and respond to unauthorized access attempts.
+- Ensure accountability by keeping a record of all changes and attempts to change credentials.
+- Identify and investigate suspicious activities that could indicate a security breach.
+- Maintain compliance with security policies and regulations that require thorough logging and monitoring of credential-related events.
 
-## Key Points
-- **Consistency**: All authentication methods should enforce the same level of security.
-- **No Weaker Alternatives**: Ensure there are no less secure pathways that attackers could exploit.
+## Practical Example
+To meet this requirement, an organization might:
+- Implement logging for all login attempts, including successful and failed attempts.
+- Log all changes to credentials, such as password changes, security question updates, and multi-factor authentication (MFA) modifications.
+- Ensure that logs are stored securely and are only accessible to authorized personnel.
+- Regularly review logs for suspicious activities, such as multiple failed login attempts or unusual patterns of credential changes.
 
-By implementing this requirement, organizations can ensure that their authentication processes are uniformly secure, protecting the application from potential security breaches due to inconsistent security controls.
+For example, if a user tries to change their password multiple times within a short period, this could indicate an attempted brute force attack. By logging these attempts and reviewing the logs, the organization can detect and respond to such activities promptly.
 
----
-
-# CWE-306: Missing Authentication for Critical Function
-CWE-306 refers to the lack of authentication for critical functions in an application. This means that important functionalities, which should be restricted to authorized users, are accessible without any authentication, posing a significant security risk.
-
-[Read more](https://cwe.mitre.org/data/definitions/306.html).
+By auditing credential changes, organizations can enhance their security posture, ensure compliance, and protect against unauthorized access.
