--- a/public/docs/asvs/403/V1.4.5.md
+++ b/public/docs/asvs/403/V1.4.5.md
@@ -1,24 +1,29 @@
-# Attribute or Feature-Based Access Control
+*V1.4 Access Control Architecture*
 
-> Verify that attribute or feature-based access control is used, where the code checks the user's authorization for a specific feature or data item rather than just their role. Permissions should still be allocated using roles.
+# Feature-Based Access Control
+
+> Verify that attribute or feature-based access control is used whereby the code checks the user's authorization for a feature/data item rather than just their role. Permissions should still be allocated using roles.
 
 ## Objective
-Ensure that access control decisions are made based on specific attributes or features, providing more granular and precise access control than role-based access control alone.
+The objective of this requirement is to ensure that access control is fine-grained and checks are based on specific attributes or features that a user is authorized to access. This goes beyond simple role-based access control (RBAC) by considering additional attributes and conditions for making access decisions.
 
 ## Rationale
-Attribute or feature-based access control (ABAC or FBAC) provides a finer level of control over what users can do within the system. Instead of relying solely on roles, which can be broad and sometimes insufficient, ABAC/FBAC evaluates specific attributes such as user properties, resource types, and environmental conditions to make access decisions. This approach allows for more nuanced and secure access policies. While roles are useful for initial permission assignments, checking attributes or specific features enhances security by ensuring users can only access what they are explicitly authorized to.
+Implementing attribute or feature-based access control helps to:
+- **Provide fine-grained access control**: Allows for more specific and detailed access decisions based on user attributes and the context of the access request.
+- **Enhance security**: Reduces the risk of over-privileged roles by ensuring that users have access only to what they need.
+- **Improve flexibility**: Supports complex access control requirements that cannot be easily managed through roles alone.
+
+### Attack Vectors:
+- **Role Explosion**: Relying solely on roles can lead to role explosion, where too many roles are created to handle all possible access scenarios, making management difficult and error-prone.
+- **Privilege Escalation**: Inadequate checks on user attributes can lead to privilege escalation, where users gain access to resources they should not have.
+- **Bypass Attacks**: Without fine-grained controls, attackers might exploit broad role-based permissions to access sensitive data or features.
 
 ## Practical Example
-In a document management system, a user might have the role of "Editor." However, using ABAC/FBAC, access control would also consider additional attributes such as:
-- The document's classification level (e.g., public, confidential).
-- The user's department.
-- The user's current project assignments.
-- The user's security clearance level.
+To meet this requirement, an organization might:
+- Implement attribute-based access control (ABAC) that evaluates user attributes (e.g., department, job function) and context (e.g., time of day, location) in addition to roles.
+- Use a policy engine to define and enforce access control rules based on these attributes.
+- Ensure that permissions are still assigned using roles but are refined with additional checks based on attributes.
 
-For example:
-- An editor with access to public documents might be denied access to confidential documents unless they have a higher security clearance.
-- An editor working on Project A might not be allowed to edit documents related to Project B unless their project assignment includes both projects.
+For example, a healthcare application might grant access to patient records based not only on the role (e.g., doctor, nurse) but also on the specific department and the patient's treatment status. A doctor in the cardiology department might have access to cardiology patient records, but not to records from other departments unless explicitly authorized.
 
-This granularity ensures that access control policies are more precisely tailored to real-world needs and security requirements.
-
-By implementing attribute or feature-based access control, organizations can better secure their systems by ensuring that users have access only to the specific features and data they are authorized to use, beyond just their assigned roles.
+By implementing attribute or feature-based access control, organizations can achieve more precise and secure access control, reducing the risk of unauthorized access and enhancing overall security.
