--- a/public/docs/asvs/403/V1.5.2.md
+++ b/public/docs/asvs/403/V1.5.2.md
@@ -1,53 +1,29 @@
 *V1.5 Input and Output Architecture*
 
-# Serialization Security
+# Serialization Integrity Controls
 
-> Verify that serialization is not used when communicating with untrusted clients. If serialization must be used, ensure integrity controls (and possibly encryption) are enforced to prevent deserialization attacks including object injection.
+> Verify that serialization is not used when communicating with untrusted clients. If this is not possible, ensure that adequate integrity controls (and possibly encryption if sensitive data is sent) are enforced to prevent deserialization attacks including object injection.
 
 ## Objective
-Prevent security vulnerabilities associated with deserialization by avoiding its use with untrusted clients or by implementing strong integrity controls if serialization cannot be avoided.
+The objective of this requirement is to avoid the use of serialization when communicating with untrusted clients. If serialization is necessary, it should be protected with integrity controls and encryption to prevent deserialization attacks, which can lead to arbitrary code execution or data tampering.
 
 ## Rationale
-Serialization is a process where an object is converted into a byte stream, and deserialization is the reverse process. When communicating with untrusted clients, deserialization can be exploited by attackers to perform attacks such as remote code execution or injecting malicious objects. By avoiding serialization or enforcing integrity controls, the application can mitigate the risks of deserialization vulnerabilities.
+Preventing deserialization attacks is crucial because:
+- **Deserialization attacks**: Malicious data can be crafted to exploit vulnerabilities in the deserialization process, leading to remote code execution.
+- **Data integrity**: Without integrity controls, serialized data can be tampered with, compromising the integrity and security of the application.
+- **Sensitive data protection**: Encrypting serialized data ensures that sensitive information is protected during transmission.
 
-## Example
+### Attack Vectors:
+- **Object Injection**: Attackers can manipulate serialized data to inject malicious objects into the application, leading to arbitrary code execution.
+- **Tampering**: Without integrity checks, attackers can alter serialized data to manipulate application behavior or gain unauthorized access.
+- **Replay Attacks**: Attackers can capture and replay serialized data to repeat actions without proper authorization.
 
-In a scenario where a web application needs to serialize data to send to a client, it’s crucial to ensure that deserialization attacks are mitigated. For instance, using JSON Web Tokens (JWT) with signed payloads can help ensure data integrity when exchanging serialized data between a server and a client.
+## Practical Example
+To meet this requirement, an organization might:
+- Avoid using serialization when communicating with untrusted clients whenever possible.
+- Implement integrity checks, such as digital signatures or message authentication codes (MAC), to ensure the integrity of serialized data.
+- Use encryption to protect serialized data containing sensitive information during transmission.
 
-```javascript
-const jwt = require('jsonwebtoken');
+For example, if an application must serialize objects for communication with a client, the serialized data should be signed with a private key to ensure it has not been tampered with. Additionally, encrypting the serialized data helps protect it from being read or manipulated by attackers during transit.
 
-const secretKey = 'your-256-bit-secret';
-
-// Function to serialize data
-function serializeData(data) {
-  const token = jwt.sign(data, secretKey);
-  return token;
-}
-
-// Function to deserialize data
-function deserializeData(token) {
-  try {
-    const data = jwt.verify(token, secretKey);
-    return data;
-  } catch (error) {
-    console.error('Deserialization failed:', error);
-    return null;
-  }
-}
-
-// Example usage
-const data = { username: 'exampleUser', role: 'admin' };
-const serializedData = serializeData(data);
-console.log('Serialized Data:', serializedData);
-
-const deserializedData = deserializeData(serializedData);
-console.log('Deserialized Data:', deserializedData);
-```
-
-In this example, the data is serialized into a JWT with a signature that ensures its integrity. When deserializing, the JWT is verified using the same secret key, ensuring that the data has not been tampered with. This approach mitigates the risk of deserialization attacks by ensuring the integrity of the serialized data.
-
-## Key Points
-- **Avoid Serialization**: Do not use serialization when communicating with untrusted clients.
-- **Integrity Controls**: If serialization is necessary, implement strong integrity checks and possibly encryption to protect against deserialization attacks.
-
+By enforcing these controls, organizations can protect against deserialization attacks and ensure the integrity and security of their data.
