--- a/public/docs/asvs/403/V1.5.4.md
+++ b/public/docs/asvs/403/V1.5.4.md
@@ -1,72 +1,29 @@
 *V1.5 Input and Output Architecture*
 
-# Verify that output encoding occurs close to or by the interpreter for which it is intended.
+# Output Encoding Near the Interpreter
 
-> Ensure that data is encoded properly right before it is interpreted by the system, such as in the HTML, JavaScript, or SQL contexts.
+> Verify that output encoding occurs close to or by the interpreter for which it is intended.
 
 ## Objective
-To prevent security vulnerabilities like Cross-Site Scripting (XSS) and Injection attacks by making sure that data is safely encoded in the context where it will be processed or displayed.
+The objective of this requirement is to ensure that output encoding is performed as close to the point of output as possible. This minimizes the risk of encoding errors and ensures that the data is correctly encoded for the specific interpreter (e.g., HTML, JavaScript) that will process it.
 
 ## Rationale
-Encoding data close to the interpreter ensures that it is processed in a safe manner, reducing the risk of malicious input being executed in the application. This practice ensures that data remains in its encoded form until it reaches the interpreter, which minimizes the risk of untrusted data being manipulated or mishandled.
+Performing output encoding near the interpreter helps to:
+- **Prevent injection attacks**: Properly encoding data for the target interpreter (e.g., HTML, JavaScript) prevents injection attacks like XSS (Cross-Site Scripting).
+- **Maintain data integrity**: Ensures that the data is correctly formatted and interpreted as intended.
+- **Simplify security practices**: Centralizing encoding at the point of interpretation reduces complexity and the likelihood of mistakes in encoding logic.
 
-## Application Context
-This requirement should be considered whenever user-supplied data is being displayed or processed within an application. It is particularly critical in web applications that dynamically generate HTML, JavaScript, or SQL statements based on user input. Developers must be vigilant in contexts where data can be interpreted in multiple ways, such as within attributes, URLs, or embedded scripts. Ensuring output encoding is implemented close to the point of interpretation is vital in any part of the application where user input is reflected back to the user, such as search results, profile pages, or error messages. This practice is also essential during code reviews and security audits to verify that no encoding steps have been missed or incorrectly applied.
+### Attack Vectors:
+- **Cross-Site Scripting (XSS)**: Attackers can inject malicious scripts into web pages if output encoding is not properly applied, leading to the execution of malicious code in the user's browser.
+- **Injection Attacks**: Improper encoding can lead to various injection vulnerabilities where attackers can manipulate the interpreter to execute unintended commands.
+- **Data Corruption**: Incorrect encoding can alter the data, leading to corruption and potential security issues.
 
-## Examples
+## Practical Example
+To meet this requirement, an organization might:
+- Implement context-specific encoding functions that are called right before data is output to the interpreter.
+- Use libraries or frameworks that provide built-in functions for encoding data appropriately based on the context (e.g., HTML encoding, JavaScript escaping).
+- Ensure that all data output paths are reviewed to confirm that encoding occurs immediately before the data is passed to the interpreter.
 
-Several modern web frameworks and libraries handle output encoding securely by default. Here are some examples:
+For example, if an application outputs user-generated content to a web page, the content should be HTML-encoded right before it is inserted into the HTML document. This ensures that any potentially malicious characters are encoded, preventing them from being interpreted as executable code by the browser.
 
-1. **React**:
-   - **Default Behavior**: React automatically encodes data when using JSX syntax, preventing XSS attacks by default.
-   - **Edge Case**: Using `dangerouslySetInnerHTML` bypasses this protection, requiring manual encoding.
-   ```javascript
-   import React from 'react';
-
-   // Safe: React encodes by default
-   const SafeComponent = ({ userInput }) => <div>{userInput}</div>;
-
-   // Unsafe: Developer must ensure encoding
-   const UnsafeComponent = ({ userInput }) => (
-       <div dangerouslySetInnerHTML={{ __html: userInput }} />
-   );
-   ```
-
-2. **Angular**:
-   - **Default Behavior**: Angular automatically sanitizes data in templates, preventing XSS.
-   - **Edge Case**: Using `bypassSecurityTrustHtml` from `DomSanitizer` can expose the app to XSS risks.
-   ```typescript
-   import { DomSanitizer } from '@angular/platform-browser';
-
-   // Safe: Angular sanitizes by default
-   <div>{{ userInput }}</div>
-
-   // Unsafe: Developer must ensure encoding
-   const unsafeHtml = this.sanitizer.bypassSecurityTrustHtml(userInput);
-   ```
-
-3. **Vue.js**:
-   - **Default Behavior**: Vue.js escapes HTML by default in templates, mitigating XSS risks.
-   - **Edge Case**: Using `v-html` directive requires caution and proper encoding.
-   ```javascript
-   // Safe: Vue.js escapes by default
-   <div>{{ userInput }}</div>
-
-   // Unsafe: Developer must ensure encoding
-   <div v-html="userInput"></div>
-   ```
-
-4. **ASP.NET Core**:
-   - **Default Behavior**: Razor views in ASP.NET Core automatically encode output.
-   - **Edge Case**: Using `Html.Raw` requires manual encoding.
-   ```csharp
-   // Safe: Razor encodes by default
-   <div>@userInput</div>
-
-   // Unsafe: Developer must ensure encoding
-   <div>@Html.Raw(userInput)</div>
-   ```
-
-By understanding the default behaviors and edge cases of these modern frameworks and libraries, developers can better ensure that output encoding is consistently and correctly applied, thereby enhancing the security of their applications.
-
-By understanding and implementing output encoding close to where the data is interpreted, you enhance the security of your application and protect it from various injection attacks.
+By ensuring that output encoding occurs near the interpreter, organizations can reduce the risk of injection attacks and maintain the integrity of the data processed by their applications.
