--- a/public/docs/asvs/403/V1.6.1.md
+++ b/public/docs/asvs/403/V1.6.1.md
@@ -2,13 +2,30 @@
 
 # Cryptographic Key Management Policy
 
-> Ensure the existence of a clear policy for managing cryptographic keys, ensuring that the entire key lifecycle adheres to established key management standards, such as NIST SP 800-57.
+> Verify that there is an explicit policy for management of cryptographic keys and that a cryptographic key lifecycle follows a key management standard such as NIST SP 800-57.
 
 ## Objective
-To establish a systematic approach to handling cryptographic keys that ensures their secure generation, distribution, storage, rotation, and destruction. By integrating key management policies into the architecture and design of the application, we ensure that security considerations are incorporated from the beginning and maintained throughout the lifecycle of the system.
+The objective of this requirement is to ensure that cryptographic keys are managed securely throughout their lifecycle, from creation to retirement. This includes having a clear policy that adheres to established standards for key management, ensuring the security and integrity of the cryptographic operations.
 
 ## Rationale
-Proper management of cryptographic keys is crucial for maintaining the security of encrypted data. Adhering to recognized key management standards helps prevent unauthorized access and misuse of keys, ensuring that cryptographic systems remain secure throughout their lifecycle. Incorporating these practices into the architecture, design, and threat modeling phases ensures a robust security posture that addresses potential vulnerabilities early in the development process.
+Having a robust cryptographic key management policy helps to:
+- **Ensure compliance**: Adhere to recognized standards and best practices (e.g., NIST SP 800-57) for key management.
+- **Protect keys**: Safeguard cryptographic keys against unauthorized access and misuse.
+- **Enhance security**: Ensure that keys are generated, distributed, stored, and retired securely, reducing the risk of key compromise.
+- **Facilitate auditing**: Provide a clear framework for auditing and verifying the secure management of cryptographic keys.
 
-## When to Implement
-This requirement should be implemented in any system that uses cryptographic keys to secure data, including web applications, databases, mobile apps, and other systems relying on encryption to protect sensitive information. It is particularly important for systems that handle financial transactions, personal data, health records, and other sensitive data. Ensuring a robust key management policy is critical during the design phase and should be revisited during regular security reviews and audits.
+### Attack Vectors
+- **Key Compromise**: Without a strong management policy, cryptographic keys can be exposed to unauthorized access, leading to potential data breaches.
+- **Improper Key Usage**: Lack of clear guidelines can result in keys being used improperly, increasing the risk of cryptographic failures.
+- **Key Lifecycle Mismanagement**: Inadequate handling of key lifecycle events (creation, rotation, retirement) can lead to weakened security and increased vulnerability to attacks.
+
+## Practical Example
+To meet this requirement, an organization might:
+- Develop and document a cryptographic key management policy that follows NIST SP 800-57 or similar standards.
+- Implement procedures for secure key generation, distribution, storage, rotation, and retirement.
+- Use hardware security modules (HSMs) or key management services (KMS) to enforce and manage cryptographic keys securely.
+- Regularly review and update the key management policy to adapt to new security threats and technological advancements.
+
+For example, a financial institution might use an HSM to manage its cryptographic keys. The HSM ensures that keys are generated and stored securely, and it provides mechanisms for key rotation and retirement according to the institution's key management policy.
+
+By implementing a comprehensive cryptographic key management policy, organizations can ensure that their cryptographic operations are secure and resilient against potential attacks.
