--- a/public/docs/asvs/403/V1.6.2.md
+++ b/public/docs/asvs/403/V1.6.2.md
@@ -1,14 +1,30 @@
 *V1.6 Cryptographic Architecture*
 
-# Cryptographic Key Protection
+# Protecting Key Material
 
-> Ensure that consumers of cryptographic services protect key material and other secrets by using key vaults or API-based alternatives.
+> Verify that consumers of cryptographic services protect key material and other secrets by using key vaults or API-based alternatives.
 
 ## Objective
-To integrate secure storage solutions into the architecture and design of applications, ensuring that cryptographic keys and other sensitive materials are protected throughout their lifecycle. This includes secure generation, storage, distribution, and management of keys to prevent unauthorized access and misuse.
+The objective of this requirement is to ensure that cryptographic key material and other sensitive secrets are stored securely. This involves using dedicated key management solutions such as key vaults or secure APIs, which are designed to protect keys from unauthorized access and misuse.
 
 ## Rationale
-Effective cryptographic key management is fundamental to maintaining the security of an application’s data. Using secure storage solutions like key vaults or API-based alternatives ensures that keys are managed according to best practices, reducing the risk of exposure and tampering. By embedding these practices into the architecture and design phase, we create a robust security foundation that addresses potential threats early in the development process.
+Using key vaults or API-based key management solutions helps to:
+- **Enhance security**: Protects cryptographic keys and secrets against unauthorized access and theft.
+- **Ensure compliance**: Adheres to security best practices and regulatory requirements for key management.
+- **Simplify key management**: Provides centralized and automated management of cryptographic keys, making it easier to enforce policies and maintain security.
+- **Improve auditability**: Enables logging and auditing of key access and usage, helping to detect and respond to unauthorized attempts.
 
-## When to Implement
-This requirement should be considered during the architecture and design phases of any system that utilizes cryptographic keys for securing data. It is critical for systems handling sensitive information, such as financial transactions, personal data, or health records. Secure key management should be revisited during threat modeling exercises and regular security reviews to ensure ongoing protection.
+### Attack Vectors
+- **Key Theft**: Without proper protection, cryptographic keys can be stolen from less secure storage solutions, leading to data breaches.
+- **Unauthorized Access**: Improperly managed keys can be accessed and used by unauthorized parties, compromising the security of cryptographic operations.
+- **Key Mismanagement**: Manual key management can result in errors or oversights that weaken security, such as failing to rotate keys or securely delete old keys.
+
+## Practical Example
+To meet this requirement, an organization might:
+- Use a cloud-based key management service (KMS) like AWS KMS, Azure Key Vault, or Google Cloud KMS to manage cryptographic keys.
+- Implement API-based key management solutions that securely store and handle keys, ensuring they are only accessible by authorized services.
+- Regularly audit and monitor key access logs to detect and respond to unauthorized access attempts.
+
+For example, an application that encrypts sensitive user data could store its encryption keys in AWS KMS. The application would use the KMS API to securely retrieve and use the keys for encryption and decryption operations, ensuring that the keys are never exposed to the application code or stored in less secure locations.
+
+By using dedicated key vaults or secure APIs for key management, organizations can significantly enhance the security of their cryptographic operations and protect sensitive data from potential threats.
