--- a/public/docs/asvs/403/V1.6.3.md
+++ b/public/docs/asvs/403/V1.6.3.md
@@ -1,14 +1,30 @@
 *V1.6 Cryptographic Architecture*
 
-# Key and Password Replacement Process
+# Replaceable Keys and Passwords
 
 > Verify that all keys and passwords are replaceable and are part of a well-defined process to re-encrypt sensitive data.
 
 ## Objective
-To design and implement a system architecture that allows for the secure replacement of cryptographic keys and passwords, ensuring that sensitive data can be re-encrypted without exposing it to unauthorized access.
+The objective of this requirement is to ensure that cryptographic keys and passwords can be replaced when necessary and that there is a defined process for re-encrypting sensitive data. This is crucial for maintaining the security of encrypted data, especially if keys or passwords are compromised or need to be rotated.
 
 ## Rationale
-Including a process for key and password replacement in the system architecture ensures that compromised or outdated keys and passwords can be updated without disrupting service or compromising data security. This proactive measure helps mitigate risks associated with key exposure, ensuring the continued integrity and confidentiality of sensitive data. Integrating this into the architecture and design phase allows for seamless transitions and maintains robust security postures.
+Having replaceable keys and passwords with a well-defined re-encryption process helps to:
+- **Maintain data security**: Ensure that sensitive data remains protected even if cryptographic keys or passwords are compromised.
+- **Facilitate key rotation**: Regularly rotating keys and passwords enhances security by limiting the amount of data exposed if a key is compromised.
+- **Enable incident response**: Provide a clear procedure for responding to key compromise incidents, minimizing the impact on data security.
+- **Ensure compliance**: Adhere to security best practices and regulatory requirements that mandate key and password rotation and re-encryption processes.
 
-## When to Implement
-This requirement should be implemented during the architecture and design phases of any system utilizing cryptographic keys or passwords for securing data. It is crucial for systems that handle sensitive information, such as financial transactions, personal data, or health records. The process should be revisited during threat modeling and security reviews to ensure it remains effective and up-to-date with emerging threats and compliance requirements.
+### Attack Vectors
+- **Key Compromise**: If keys are compromised and cannot be replaced, attackers could decrypt sensitive data, leading to data breaches.
+- **Stale Keys**: Using old or weak keys can make encryption vulnerable to attacks, compromising the security of the encrypted data.
+- **Insufficient Key Management**: Without a defined process for key replacement and re-encryption, organizations may struggle to maintain the security of their encrypted data over time.
+
+## Practical Example
+To meet this requirement, an organization might:
+- Implement a key management system that supports key rotation and provides a mechanism for securely replacing keys.
+- Define and document a process for re-encrypting sensitive data when keys are replaced, ensuring that data remains secure throughout the transition.
+- Regularly audit and test the key replacement and re-encryption process to ensure it works effectively and securely.
+
+For example, a cloud storage service might use a key management system that automatically rotates encryption keys every 90 days. When keys are rotated, the system re-encrypts stored data with the new keys, ensuring continuous protection. The process is documented and tested regularly to ensure it can be executed smoothly without data loss or downtime.
+
+By ensuring that keys and passwords are replaceable and part of a well-defined re-encryption process, organizations can maintain the security of their encrypted data and reduce the risk of data breaches.
