--- a/public/docs/asvs/403/V1.7.1.md
+++ b/public/docs/asvs/403/V1.7.1.md
@@ -1,14 +1,30 @@
-*V1.7 Errors, Logging, and Auditing Architecture*
+*V1.7 Errors, Logging and Auditing Architecture*
 
 # Common Logging Format
 
-> Ensure that a common logging format and approach is used across the system.
+> Verify that a common logging format and approach is used across the system.
 
 ## Objective
-To establish a standardized logging format and methodology across all components of the system to facilitate consistent log management, analysis, and correlation.
+The objective of this requirement is to ensure consistency in how logs are generated and formatted across the entire system. This uniformity makes it easier to analyze logs, detect anomalies, and respond to security incidents effectively.
 
 ## Rationale
-A unified logging approach is crucial for effective monitoring, detection, and troubleshooting of security events. By implementing a common logging format, developers and security teams can ensure that logs are consistently structured, making it easier to analyze and correlate data across different system components. This enhances the ability to detect anomalies, respond to incidents, and conduct forensic investigations. Integrating this requirement into the architecture and design phases ensures that logging practices are standardized from the outset, providing a robust foundation for ongoing security monitoring and auditing.
+Using a common logging format helps to:
+- **Improve log analysis**: Consistent log formats make it easier to parse, search, and analyze logs.
+- **Enhance security monitoring**: Standardized logs facilitate the detection of unusual patterns and potential security incidents.
+- **Streamline auditing**: Uniform logs simplify the process of auditing and compliance reporting.
+- **Enable integration**: Consistent logging formats allow seamless integration with security information and event management (SIEM) systems and other log analysis tools.
 
-## When to Implement
-This requirement should be implemented during the architecture and design phases of any system that requires logging for security, monitoring, or auditing purposes. It is especially important for applications that handle sensitive data or are subject to regulatory compliance. The standardized logging approach should be revisited during security reviews and updates to ensure it remains effective and comprehensive.
+### Attack Vectors:
+- **Log Forging**: Inconsistent log formats can make it easier for attackers to forge or manipulate log entries, hindering detection efforts.
+- **Missed Alerts**: Variations in log formats can cause security monitoring tools to miss critical events or generate false positives.
+- **Inefficient Incident Response**: Disparate log formats can slow down the process of correlating events and understanding the sequence of an attack.
+
+## Practical Example
+To meet this requirement, an organization might:
+- Define a standard log format that includes essential fields such as timestamp, event type, user ID, IP address, and event details.
+- Ensure that all applications and services adhere to this standard format when generating logs.
+- Use centralized logging solutions that enforce the standard format and aggregate logs from various sources.
+
+For example, a web application and its associated microservices should all log events in a predefined format such as JSON, ensuring that each log entry includes a timestamp, log level (e.g., INFO, ERROR), service name, and detailed event message. This standardization helps security teams quickly analyze logs and identify issues across the system.
+
+By adopting a common logging format, organizations can enhance their security posture, improve incident response times, and maintain effective oversight of their systems.
