--- a/public/docs/asvs/403/V1.7.2.md
+++ b/public/docs/asvs/403/V1.7.2.md
@@ -1,14 +1,30 @@
-*V1.7 Errors, Logging, and Auditing Architecture*
+*V1.7 Errors, Logging and Auditing Architecture*
 
 # Secure Log Transmission
 
 > Verify that logs are securely transmitted to a preferably remote system for analysis, detection, alerting, and escalation.
 
 ## Objective
-To design and implement a system architecture that ensures logs are securely transmitted to a remote or centralized logging system. This enables reliable analysis, detection of anomalies, alerting for potential security incidents, and appropriate escalation of issues.
+The objective of this requirement is to ensure that logs are transmitted securely to a remote system. This facilitates centralized analysis, detection of anomalies, and timely alerting and escalation of security events while protecting the logs from tampering and unauthorized access.
 
 ## Rationale
-Secure transmission of logs is essential to prevent unauthorized access and tampering during transport. By ensuring that logs are sent to a secure, remote system, we protect the integrity and confidentiality of log data, making it available for effective monitoring and incident response. This practice is fundamental in detecting and responding to security events in a timely manner, and helps maintain a comprehensive audit trail for forensic analysis. Integrating secure log transmission into the architecture and design phases ensures that security measures are in place from the beginning, supporting ongoing operational security and compliance.
+Securely transmitting logs to a remote system helps to:
+- **Prevent tampering**: Protect logs from being altered or deleted by an attacker who gains access to the application or local system.
+- **Enable centralized analysis**: Centralized logging systems allow for comprehensive analysis and correlation of log data from multiple sources.
+- **Enhance incident response**: Quick detection and alerting of suspicious activities enable faster response to security incidents.
+- **Ensure log integrity**: Secure transmission methods, such as encryption, ensure that logs remain intact and confidential during transit.
 
-## When to Implement
-This requirement should be implemented during the architecture and design phases of any system that generates logs for security, monitoring, or auditing purposes. It is particularly crucial for systems that handle sensitive data or require high levels of security. Secure log transmission should be reviewed and maintained during regular security audits and updates to ensure its continued effectiveness.
+### Attack Vectors:
+- **Log Tampering**: Attackers may alter or delete local logs to cover their tracks, making it difficult to detect and investigate security breaches.
+- **Eavesdropping**: Without secure transmission, sensitive log data can be intercepted by attackers, revealing critical information about the system and its security posture.
+- **Denial of Service**: Attackers might flood the logging system with false entries, overwhelming local logging capabilities and hindering effective monitoring.
+
+## Practical Example
+To meet this requirement, an organization might:
+- Use secure protocols, such as TLS, to encrypt log data during transmission to a remote logging server or SIEM (Security Information and Event Management) system.
+- Implement log forwarding agents that securely transmit logs from application servers to a central logging infrastructure.
+- Ensure that access to the logging system is restricted to authorized personnel only and that logs are protected against unauthorized access and modification.
+
+For example, an application might use a logging agent configured to forward logs to an external SIEM system over an encrypted TLS connection. This setup ensures that all log data is securely transmitted and centrally stored, enabling robust analysis and alerting capabilities.
+
+By securely transmitting logs to a remote system, organizations can enhance their ability to detect, analyze, and respond to security incidents, while ensuring the integrity and confidentiality of their log data.
