--- a/public/docs/asvs/403/V2.1.1.md
+++ b/public/docs/asvs/403/V2.1.1.md
@@ -1,43 +1,19 @@
-# Password Length
+*V2.1 Password Security*
 
-Ensure that user passwords are at least 12 characters long, even after multiple spaces are combined into one.
+# User Set Password Length
+
+> Verify that user set passwords are at least 12 characters in length (after multiple spaces are combined).
 
 ## Objective
-The aim is to enforce a minimum password length to improve security by making passwords harder to guess or crack through brute force attacks.
+The primary goal of this requirement is to enhance password security by ensuring users create sufficiently long passwords. Longer passwords are more resilient to brute force attacks, making it harder for attackers to guess or crack them.
 
 ## Rationale
-Longer passwords provide a higher level of security by increasing the number of possible combinations, making it more challenging for attackers to break the password. Attackers might use tools like Hashcat, John the Ripper, or other brute force and dictionary attack software to systematically try every possible combination of characters until the correct password is found.
+Longer passwords provide greater security because they increase the number of possible combinations, thereby making it more difficult for attackers to succeed with brute force methods. By enforcing a minimum password length of 12 characters, you significantly improve the security of user accounts.
 
-By requiring passwords to be at least 12 characters long, the complexity of cracking the password increases exponentially. This makes brute force attacks computationally impractical for most attackers, as it significantly extends the time required to guess the correct password.
+## What You Should Do
+1. **Enforce Minimum Length**: Ensure that the password creation and update processes in your application enforce a minimum length of 12 characters.
+2. **Educate Users**: Inform users about the importance of creating long, complex passwords to enhance their security.
+3. **Combine Spaces**: Allow spaces in passwords, but treat multiple consecutive spaces as a single space to prevent trivial length padding.
 
-## Practical Example
-When a user sets or updates their password, the application should verify that the password length, after condensing any consecutive spaces into a single space, is at least 12 characters. For instance, if a user enters a password with multiple spaces like "this is a password", it should be treated as "this is a password" for the length check.
-
-## Code Example
-```typescript
-/**
- * Checks if the given password is valid based on the length requirement.
- * @param password - The password to validate.
- * @returns boolean - True if the password is valid, false otherwise.
- */
-function isPasswordValid(password: string): boolean {
-    // Replace multiple consecutive spaces with a single space
-    const condensedPassword = password.replace(/\s+/g, ' ');
-
-    // Check if the password is at least 12 characters long
-    return condensedPassword.length >= 12;
-}
-
-// Example usage
-const password = "this  is  a  password";
-if (isPasswordValid(password)) {
-    console.log("Password is valid.");
-} else {
-    console.log("Password must be at least 12 characters long.");
-}
-```
-
-## Key Takeaways
-- Ensure user passwords are at least 12 characters in length.
-- Combine multiple consecutive spaces into one before checking the length.
-- Enforcing this policy helps enhance security by making passwords more resistant to brute force attacks. Attackers using tools like Hashcat or John the Ripper will face exponentially increased computational difficulty, significantly extending the time and resources required to crack the password.
+## Summary
+By enforcing a minimum password length of 12 characters, you greatly enhance the security of user accounts in your application. This requirement helps prevent brute force attacks and encourages users to create more secure passwords.
