--- a/public/docs/asvs/403/V2.1.10.md
+++ b/public/docs/asvs/403/V2.1.10.md
@@ -1,17 +1,19 @@
-# No Periodic Credential Rotation
+*V2.1 Password Security*
 
-> Ensure there are no requirements for periodic password changes or maintaining password history.
+# No Periodic Credential Rotation or Password History
+
+> Verify that there are no periodic credential rotation or password history requirements.
 
 ## Objective
-Avoid mandating users to change their passwords at regular intervals and maintaining a history of previous passwords to prevent reuse.
+The primary goal of this requirement is to improve the user experience and security by avoiding unnecessary password changes and maintaining user convenience. Continuous enforcement of periodic password changes can lead to weaker passwords and user frustration.
 
 ## Rationale
-Forcing users to change their passwords regularly can lead to the creation of weaker passwords, as users might resort to slight variations of their old passwords, making them predictable. Additionally, not maintaining a history of previous passwords prevents the risk of storing potentially compromised passwords. Modern security practices emphasize the importance of strong, unique passwords rather than frequent changes.
+Mandatory periodic password changes often result in users creating predictable patterns or weaker passwords, as they might resort to slight variations of their old passwords. Eliminating periodic rotation requirements helps users create and maintain strong, unique passwords over time. Moreover, modern security practices emphasize the use of multi-factor authentication (MFA) and monitoring for compromised credentials over frequent password changes.
 
-1. **Predictable Patterns**: When users are required to change passwords frequently, they often create predictable variations, such as "Password1" followed by "Password2," making them easier for attackers to guess.
-2. **Password Fatigue**: Frequent password changes can lead to user frustration and poor password management practices, such as writing down passwords or reusing them across different accounts, increasing security risks.
+## What You Should Do
+1. **Avoid Mandatory Password Changes**: Do not enforce policies that require users to change their passwords periodically without a specific reason.
+2. **Use Multi-Factor Authentication (MFA)**: Implement MFA to enhance security without relying on frequent password changes.
+3. **Monitor for Compromised Credentials**: Regularly check passwords against breached password lists and prompt users to change their passwords only if they are compromised.
 
-## Key Takeaways
-- Do not enforce periodic password changes.
-- Focus on ensuring users create strong, unique passwords.
-- Avoid maintaining a history of previous passwords to prevent reuse and potential compromise【71:0†source】.
+## Summary
+By avoiding periodic credential rotation and password history requirements, you enhance the user experience and encourage the creation of strong, unique passwords. This approach aligns with modern security practices that focus on MFA and compromised credential monitoring, providing a more robust security posture.
