--- a/public/docs/asvs/403/V2.1.12.md
+++ b/public/docs/asvs/403/V2.1.12.md
@@ -1,51 +1,22 @@
+*V2.1 Password Security*
+
 # View Masked Passwords
 
-> Allow users to temporarily view the entire masked password or the last typed character on platforms that do not have this functionality built-in.
+> Verify that the user can choose to either temporarily view the entire masked password, or temporarily view the last typed character of the password on platforms that do not have this as built-in functionality.
 
 ## Objective
-Provide users with the option to see their password while typing to reduce errors and improve the user experience.
+The primary goal of this requirement is to enhance user experience and reduce errors during password entry by allowing users to temporarily view their masked passwords. This helps users ensure they have entered their passwords correctly.
 
 ## Rationale
-Allowing users to view their passwords temporarily helps prevent typos and ensures they enter their intended password, reducing frustration and the need for password resets. This functionality is particularly important on platforms that do not natively support viewing masked passwords.
+Masked password fields help protect passwords from being seen by others, but they can also lead to user frustration and increased errors during password entry. By allowing users to temporarily view their passwords, you:
+- **Reduce Entry Errors**: Help users verify their password entry, reducing the likelihood of errors and the need for password resets.
+- **Improve Usability**: Enhance the user experience by providing an option to view the password without compromising security.
+- **Balance Security and Convenience**: Maintain security while offering a convenient way for users to check their passwords.
 
-## React Example
-Here is a React component that allows users to toggle the visibility of their password:
+## What You Should Do
+1. **Implement View Option**: Provide an option for users to temporarily view their entire password or the last typed character in the password field.
+2. **Ensure Security**: Implement this functionality securely to ensure that the temporary view does not compromise the overall security of the password field.
+3. **Educate Users**: Inform users about the option and how to use it to verify their password entries.
 
-```jsx
-import React, { useState } from 'react';
-
-const PasswordInput = () => {
-  const [password, setPassword] = useState('');
-  const [showPassword, setShowPassword] = useState(false);
-
-  const handlePasswordChange = (e) => {
-    setPassword(e.target.value);
-  };
-
-  const toggleShowPassword = () => {
-    setShowPassword(!showPassword);
-  };
-
-  return (
-    <div>
-      <label htmlFor="password">Password</label>
-      <input
-        type={showPassword ? 'text' : 'password'}
-        id="password"
-        value={password}
-        onChange={handlePasswordChange}
-      />
-      <button type="button" onClick={toggleShowPassword}>
-        {showPassword ? 'Hide' : 'Show'}
-      </button>
-    </div>
-  );
-};
-
-export default PasswordInput;
-```
-
-## Key Takeaways
-- Provide an option for users to temporarily view their passwords to reduce entry errors.
-- Enhance the user experience by allowing flexibility in password visibility.
-- Implementing this feature helps prevent typos and ensures users can verify their password entries.
+## Summary
+By allowing users to temporarily view their masked passwords, you improve the usability and accuracy of password entry. This feature helps balance security with user convenience, reducing the likelihood of password entry errors and improving the overall user experience【121:0†source】.
