--- a/public/docs/asvs/403/V2.1.4.md
+++ b/public/docs/asvs/403/V2.1.4.md
@@ -1,42 +1,19 @@
-# Allow All Printable Unicode Characters in Passwords
+*V2.1 Password Security*
 
-> Verify that any printable Unicode character, including language-neutral characters such as spaces and emojis, are permitted in passwords.
+# Allow Any Printable Unicode Character in Passwords
+
+> Verify that any printable Unicode character, including language-neutral characters such as spaces and Emojis, are permitted in passwords.
 
 ## Objective
-Ensure that users have the flexibility to create strong, complex passwords using a wide range of characters, enhancing password security and accommodating diverse user needs.
+The primary goal of this requirement is to enhance password security by allowing users to create passwords with a wide variety of characters. This increases the complexity and uniqueness of passwords, making them more resistant to guessing and brute-force attacks.
 
 ## Rationale
-Allowing all printable Unicode characters in passwords helps users create strong, memorable passwords that can include a mix of different character types. This flexibility can significantly increase the complexity and security of passwords, making them harder to guess or crack. Additionally, supporting a wide range of characters, including spaces and emojis, allows for more personalized and unique passwords, which can be easier for users to remember.
+Permitting any printable Unicode character, including spaces and Emojis, allows users to create more complex and memorable passwords. This flexibility can lead to stronger passwords, as users can use characters from different languages, symbols, and even Emojis, thereby increasing the overall security of their passwords.
 
-1. **Brute Force Attacks**: By allowing a larger set of characters, the number of possible combinations for a password increases exponentially, making brute force attacks more time-consuming and difficult.
-2. **Dictionary Attacks**: Allowing diverse character sets makes it less likely for passwords to match common words or phrases found in dictionaries used by attackers.
+## What You Should Do
+1. **Support Unicode Characters**: Ensure your application supports the use of any printable Unicode character in passwords, including symbols, letters from various languages, spaces, and Emojis.
+2. **Update Password Policies**: Update your password policies to reflect the acceptance of any printable Unicode characters, providing users with the flexibility to create strong and unique passwords.
+3. **Test Input Handling**: Thoroughly test your password input handling to ensure it correctly processes and stores all supported Unicode characters without introducing security vulnerabilities.
 
-## Practical Example
-When a user sets or updates their password, the application should accept any printable Unicode character, ensuring that the full range of characters can be used to create a secure password.
-
-## Code Example
-Here is a TypeScript example that demonstrates how to enforce this requirement:
-
-```typescript
-/**
- * Checks if the given password meets the security requirements.
- * @param password - The password to validate.
- * @returns boolean - True if the password meets the requirements, false otherwise.
- */
-function isPasswordValid(password: string): boolean {
-    // Replace multiple consecutive spaces with a single space
-    const condensedPassword = password.replace(/\s+/g, ' ');
-
-    // Ensure the password length is within the allowed range
-    const length = condensedPassword.length;
-    return length >= 12 && length <= 128;
-}
-
-// Example usage
-const password = "🔒 This is a secure password 🔒";
-if (isPasswordValid(password)) {
-    console.log("Password is valid.");
-} else {
-    console.log("Password must be between 12 and 128 characters long.");
-}
-```
+### Summary
+By allowing any printable Unicode character in passwords, you enable users to create stronger, more diverse passwords, thereby enhancing the overall security of your application. This approach increases password complexity and makes it harder for attackers to compromise user accounts through brute-force or guessing attacks.
