--- a/public/docs/asvs/403/V2.1.5.md
+++ b/public/docs/asvs/403/V2.1.5.md
@@ -1,56 +1,22 @@
-# Allow Users to Change Their Password
+*V2.1 Password Security*
 
-> Verify that users can change their password.
+# Users Can Change Their Password
+
+> Verify users can change their password.
 
 ## Objective
-Ensure that users have the ability to change their password at any time, enhancing security by allowing them to respond to potential threats or personal preference changes.
+The primary goal of this requirement is to ensure that users have the ability to update their passwords. This is crucial for maintaining account security, especially if a password is compromised or the user believes it may have been.
 
 ## Rationale
-Allowing users to change their passwords is a fundamental security feature. It enables users to proactively manage their account security by updating their password if they suspect it has been compromised or simply to improve their password strength. This capability is essential for maintaining user trust and securing accounts against potential attacks.
+Allowing users to change their passwords provides several security benefits:
+- **Mitigates Risks**: Users can immediately change their passwords if they suspect that their account has been compromised.
+- **Enhances Security**: Regular password changes can reduce the likelihood of long-term password exposure.
+- **User Control**: Empowers users to manage their own security by updating passwords as needed.
 
-1. **Account Takeover**: If a user’s password is compromised, the ability to change it quickly can prevent an attacker from maintaining access to the account.
-2. **Phishing Attacks**: Users who fall victim to phishing scams can mitigate damage by changing their password immediately after realizing the compromise.
-3. **Brute Force Attacks**: Regularly changing passwords can help reduce the risk of successful brute force attacks by invalidating previously guessed passwords.
+## What You Should Do
+1. **Provide a Password Change Feature**: Ensure your application has a straightforward and accessible process for users to change their passwords.
+2. **Secure the Password Change Process**: Implement appropriate security measures to verify the user’s identity before allowing a password change (e.g., re-entering the current password, multi-factor authentication).
+3. **Notify Users**: Send notifications to users when their passwords are changed, alerting them to any unauthorized changes.
 
-## Practical Example
-Provide an interface in your application where users can update their password. Ensure that the process is secure and user-friendly.
-
-## Code Example
-Here is a TypeScript example that demonstrates how to implement password change functionality:
-```typescript
-/**
- * Validates the password change request.
- * @param currentPassword - The user's current password.
- * @param newPassword - The new password to set.
- * @returns boolean - True if the password change is valid, false otherwise.
- */
-function validatePasswordChange(currentPassword: string, newPassword: string): boolean {
-    // Mock function to check if the current password is correct
-    const isCurrentPasswordValid = (password: string) => {
-        // Placeholder for actual password validation logic
-        return password === "userCurrentPassword"; // Replace with actual password validation
-    };
-
-    // Ensure the new password meets security requirements
-    const isNewPasswordValid = (password: string) => {
-        // Replace multiple consecutive spaces with a single space
-        const condensedPassword = password.replace(/\s+/g, ' ');
-        // Check password length
-        const length = condensedPassword.length;
-        return length >= 12 && length <= 128;
-    };
-
-    // Validate current password and new password
-    return isCurrentPasswordValid(currentPassword) && isNewPasswordValid(newPassword);
-}
-
-// Example usage
-const currentPassword = "userCurrentPassword";
-const newPassword = "New Secure Password 123!";
-if (validatePasswordChange(currentPassword, newPassword)) {
-    console.log("Password change is valid.");
-    // Proceed with password change logic
-} else {
-    console.log("Password change is invalid.");
-}
-```
+## Summary
+By verifying that users can change their passwords, you enhance the security and usability of your application. This capability is a fundamental aspect of maintaining user trust and protecting accounts from unauthorized access. 
