--- a/public/docs/asvs/403/V2.1.7.md
+++ b/public/docs/asvs/403/V2.1.7.md
@@ -1,57 +1,19 @@
-# Breached Password Checking
+*V2.1 Password Security*
 
-> Check passwords during account registration, login, and password changes against a list of known breached passwords. If a password has been compromised, the user must choose a new, secure password.
+# Check Passwords Against Breached Passwords
+
+> Verify that passwords submitted during account registration, login, and password change are checked against a set of breached passwords either locally (such as the top 1,000 or 10,000 most common passwords which match the system's password policy) or using an external API. If using an API, a zero-knowledge proof or other mechanism should be used to ensure that the plain text password is not sent or used in verifying the breach status of the password. If the password is breached, the application must require the user to set a new non-breached password.
 
 ## Objective
-Ensure that users do not use passwords that are known to be compromised, thus reducing the risk of unauthorized access due to the use of weak or previously exposed passwords.
+The primary goal of this requirement is to prevent users from using passwords that have previously been compromised in data breaches. This helps protect user accounts from being easily accessible through credential stuffing attacks.
 
 ## Rationale
-Breached passwords are those that have been exposed in data breaches and are therefore well-known to attackers. Using such passwords significantly increases the risk of account compromise. By checking against a list of breached passwords, the application can prompt users to choose stronger, unique passwords, enhancing overall security.
+Checking passwords against a list of known breached passwords ensures that users do not reuse passwords that are already known to be insecure. This significantly reduces the risk of account compromise through credential stuffing, where attackers use lists of breached passwords to gain unauthorized access to accounts.
 
-### Attack Vectors
-1. **Credential Stuffing**: Attackers use lists of breached passwords in combination with common usernames to gain unauthorized access to accounts.
-2. **Brute Force Attacks**: Breached passwords are often included in brute force attack dictionaries, making them easier targets.
+## What You Should Do
+1. **Implement Local Checks**: Maintain a local database of common breached passwords and check user-submitted passwords against this list during registration, login, and password change processes.
+2. **Use External APIs**: Integrate with an external API that provides breached password checking, ensuring that a zero-knowledge proof or similar mechanism is used to avoid sending plain text passwords over the network.
+3. **Enforce Password Changes**: If a password is found to be breached, require the user to set a new, secure password that is not on the breached list.
 
-## Libraries and APIs for Checking Breached Passwords
-1. **Have I Been Pwned API**
-   - **Languages**: Available for multiple languages including JavaScript, Python, and Java.
-   - **Description**: Allows checking if a password has been compromised in a data breach without sending the plain text password.
-   - **Website**: [Have I Been Pwned API](https://haveibeenpwned.com/API/v3)
-2. **Pwned Passwords**
-   - **Languages**: Python, JavaScript, Go, Ruby.
-   - **Description**: Provides a list of breached passwords that can be integrated locally or through the API.
-   - **Website**: [Pwned Passwords](https://haveibeenpwned.com/Passwords)
-3. **HIBPwned (Node.js)**
-   - **Language**: JavaScript (Node.js).
-   - **Description**: Node.js client for Have I Been Pwned API.
-   - **GitHub Repository**: [HIBPwned](https://github.com/wKovacs64/hibpwned)
-4. **hibp (Python)**
-   - **Language**: Python.
-   - **Description**: Python client for Have I Been Pwned API.
-   - **PyPI**: [hibp](https://pypi.org/project/hibp/)
-5. **breach-check (Java)**
-   - **Language**: Java.
-   - **Description**: Java library to check passwords against the Have I Been Pwned database.
-   - **GitHub Repository**: [breach-check](https://github.com/patrickfav/breach-check)
-
-## Secure Password Handling Libraries
-1. **Argon2 (Python, Node.js, Java)**
-   - **Languages**: Python, Node.js, Java.
-   - **Description**: A secure hashing algorithm that can be used to hash passwords before checking against a breach list.
-   - **Websites**:
-     - [argon2-cffi (Python)](https://pypi.org/project/argon2-cffi/)
-     - [argon2 (Node.js)](https://www.npmjs.com/package/argon2)
-     - [argon2-jvm (Java)](https://github.com/phxql/argon2-jvm)
-2. **BCrypt (Python, Node.js, Java)**
-   - **Languages**: Python, Node.js, Java.
-   - **Description**: A password-hashing function designed to be computationally expensive to thwart brute-force attacks.
-   - **Websites**:
-     - [bcrypt (Python)](https://pypi.org/project/bcrypt/)
-     - [bcrypt (Node.js)](https://www.npmjs.com/package/bcrypt)
-     - [jBCrypt (Java)](https://www.mindrot.org/projects/jBCrypt/)
-
-## Key Takeaways
-- Ensure passwords are checked against a list of known breached passwords during account-related operations.
-- Utilize APIs like Have I Been Pwned or local libraries to perform these checks securely.
-- Implement zero-knowledge proof mechanisms if using an external API to ensure plaintext passwords are not exposed.
-- Enforcing this policy helps prevent the use of compromised passwords, reducing the risk of credential stuffing and brute force attacks.
+### Summary
+By verifying passwords against a list of breached passwords, you enhance the security of user accounts by preventing the use of passwords that are already known to be compromised. This proactive approach helps protect against credential stuffing attacks and ensures users are creating secure, unique passwords.
