--- a/public/docs/asvs/403/V1.1.6.md
+++ b/public/docs/asvs/403/V1.1.6.md
@@ -1,10 +1,24 @@
-# Centralized, Simple, Vetted, and Reusable Security Controls
+*V1.1 Secure Software Development Lifecycle*
 
-> Verify the implementation of centralized, simple, vetted, secure, and reusable security controls to avoid duplicate, missing, ineffective, or insecure controls.
+# Centralized Security Controls
+
+> Verify implementation of centralized, simple (economy of design), vetted, secure, and reusable security controls to avoid duplicate, missing, ineffective, or insecure controls.
 
 ## Objective
-Ensure that security controls are designed to be simple, centralized, and reusable to avoid redundancy and reduce the risk of errors or omissions in security implementations.
+The objective of this requirement is to ensure that security controls are standardized and centralized. This reduces complexity, prevents redundancy, and ensures that all controls are effective and secure, facilitating easier maintenance and consistency across the application.
 
 ## Rationale
-Centralized controls ensure uniform application and easier maintenance across the application, reducing the risk of inconsistent security standards. Simple controls are more accessible and easier for developers to implement correctly, reducing errors. Vetted controls are reliable and adhere to industry best practices, providing confidence in their effectiveness. Reusable controls prevent redundancy and ensure consistency, making it easier to scale security measures as the application grows. By focusing on these principles, developers can build more secure and robust applications with less effort and fewer errors.
+Implementing centralized security controls helps organizations:
+- Avoid duplication and inconsistency in security measures.
+- Ensure that all security controls are thoroughly vetted and secure.
+- Simplify the design and implementation of security controls, reducing the risk of errors.
+- Facilitate easier updates and maintenance of security controls.
+- Ensure that security controls are applied uniformly across the application.
 
+## Practical Example
+An example of implementing centralized security controls might include:
+- Using a centralized authentication service for all user authentication processes instead of implementing multiple authentication mechanisms across different parts of the application.
+- Employing a single, centralized library for input validation to ensure that all input validation is handled consistently and securely.
+- Utilizing a centralized logging framework to handle all security logging and monitoring, ensuring that all logs are collected and analyzed in a consistent manner.
+
+For instance, instead of each developer creating their own method for input validation, a centralized validation service can be provided. This service would include methods for common validation tasks such as checking for SQL injection, cross-site scripting (XSS), and other common vulnerabilities. By using this service, developers can ensure that all input validation is handled consistently and securely across the entire application.
