--- a/public/docs/asvs/403/V1.2.1.md
+++ b/public/docs/asvs/403/V1.2.1.md
@@ -1,11 +1,25 @@
-# Use of Low-Privilege Accounts
+*V1.2 Authentication Architecture*
+
+# Unique Low-Privilege Accounts
 
 > Verify the use of unique or special low-privilege operating system accounts for all application components, services, and servers.
 
 ## Objective
-Ensure that each application component, service, and server operates under a low-privilege account to minimize the potential damage from a security breach.
+The objective of this requirement is to ensure that all application components, services, and servers operate under unique or special low-privilege accounts. This minimizes the risk and impact of a compromised account by restricting the permissions available to any one account.
 
 ## Rationale
-Using low-privilege accounts limits the access and capabilities of application components and services. This containment strategy helps prevent attackers from gaining extensive control if they compromise one part of the system. By restricting privileges, the impact of any security breach is minimized, reducing the risk of unauthorized access to critical system resources and sensitive data. This approach aligns with the principle of least privilege, which is a fundamental security best practice.
+Using unique, low-privilege accounts for different components and services helps to:
+- Limit the potential damage from a compromised account.
+- Ensure that each account has only the necessary permissions to perform its function.
+- Reduce the risk of privilege escalation attacks.
+- Enhance the principle of least privilege, which is a key security best practice.
 
-By following this requirement, developers and system administrators can create a more secure environment that reduces the attack surface and contains potential breaches.
+## Practical Example
+To meet this requirement, an organization might:
+- Create specific user accounts for different services, such as a dedicated account for the database service, another for the web server, and separate accounts for each microservice.
+- Assign only the necessary permissions to each account, such as read/write access to specific directories or the ability to run certain commands.
+- Regularly review and audit account permissions to ensure they are still appropriate and have not been inadvertently escalated.
+
+For instance, if an application has a backend service that needs to access a database, the service should run under a dedicated account with permissions only to access the necessary database resources, rather than using a shared or high-privilege account. This way, if the service is compromised, the attacker cannot gain access to other parts of the system or escalate their privileges.
+
+By adhering to this requirement, organizations can significantly enhance the security of their application infrastructure, making it harder for attackers to move laterally within the environment and reducing the potential impact of security breaches.
