--- a/public/docs/asvs/403/V1.2.2.md
+++ b/public/docs/asvs/403/V1.2.2.md
@@ -1,19 +1,25 @@
+*V1.2 Authentication Architecture*
+
 # Authenticated Communications Between Components
 
 > Verify that communications between application components, including APIs, middleware, and data layers, are authenticated. Components should have the least necessary privileges needed.
 
 ## Objective
-Ensure that all communication between application components is authenticated to prevent unauthorized access and maintain secure data exchanges.
+The objective of this requirement is to ensure that all communications between application components are authenticated, minimizing the risk of unauthorized access and ensuring that components only have the privileges necessary to perform their functions.
 
 ## Rationale
-Authenticated communications between components help ensure that only legitimate and authorized components can interact with each other, reducing the risk of unauthorized access and data breaches. This security measure ensures that data exchanged between components is protected from interception and tampering.
+Authenticating communications between components helps to:
+- Prevent unauthorized access to internal APIs and services.
+- Ensure that data exchanged between components is protected from interception and tampering.
+- Enforce the principle of least privilege, reducing the risk of privilege escalation.
+- Enhance overall security by ensuring that only authenticated and authorized components can communicate with each other.
 
-The **principle of least privilege** (PoLP) is a fundamental security concept that requires each component, service, or user to have only the minimum privileges necessary to perform their functions. By adhering to PoLP, the system limits the potential damage that could result from a compromised component. If an attacker gains access to a component, the restricted privileges prevent them from accessing other parts of the system or performing unauthorized actions. This containment strategy minimizes the overall impact of security breaches and helps protect critical system resources and sensitive data.
+## Practical Example
+To meet this requirement, an organization might:
+- Implement mutual TLS (mTLS) to authenticate both the client and server components during communication.
+- Use API gateways or service meshes to manage and enforce authentication policies for internal communications.
+- Ensure that each component has unique credentials and the minimum necessary permissions to access other components or services.
 
-By enforcing authenticated communications and the principle of least privilege, organizations can enhance their application security, ensuring secure and authorized interactions between components while reducing the attack surface and potential damage from security incidents.
+For instance, if a frontend service needs to communicate with a backend API, mTLS can be used to authenticate both services. The frontend service would present its client certificate, and the backend API would verify it before allowing access. Similarly, the backend API would present its server certificate, which the frontend service would verify to ensure it's communicating with the correct service.
 
-## Key Points
-- **Authentication**: All inter-component communications must be authenticated to ensure secure interactions.
-- **Least Privilege**: Components should operate with the minimum necessary privileges to limit the potential impact of a compromised component.
-
-By implementing these measures, organizations can enhance the security of their application architecture, protecting against unauthorized access and ensuring secure communication channels between components.
+By authenticating communications between components, organizations can ensure that their internal communications are secure and that each component only has access to the resources it needs to function, reducing the overall attack surface of the application.
