--- a/public/docs/asvs/403/V1.4.1.md
+++ b/public/docs/asvs/403/V1.4.1.md
@@ -1,21 +1,30 @@
+*V1.4 Access Control Architecture*
+
 # Trusted Enforcement Points
 
 > Verify that trusted enforcement points, such as access control gateways, servers, and serverless functions, enforce access controls. Never enforce access controls on the client.
 
 ## Objective
-Ensure that access controls are enforced on the server side to prevent unauthorized access and manipulation by clients.
+The objective of this requirement is to ensure that access control mechanisms are enforced on secure, trusted components of the system. This prevents attackers from bypassing access controls by manipulating client-side code.
 
 ## Rationale
-Access controls should always be enforced on trusted server-side components rather than on the client side. Client-side enforcement is vulnerable to bypassing and manipulation by attackers. If access controls are enforced on the client, an attacker can modify the client code to bypass these controls, gaining unauthorized access to restricted resources. Server-side enforcement ensures that all access control decisions are made in a secure, controlled environment, preventing unauthorized access even if the client is compromised.
+Enforcing access controls on trusted components helps to:
+- **Ensure secure access control decisions**: By making access control decisions in a secure environment, you protect against manipulation and tampering.
+- **Prevent client-side bypasses**: Attackers can easily manipulate or disable client-side code to gain unauthorized access if access controls are enforced only on the client. By keeping access control checks on the server, you reduce this risk.
+- **Centralize access control enforcement**: Centralized control makes it easier to manage and audit access control policies, ensuring consistency and completeness.
+- **Increase security and reliability**: Server-side environments are generally more secure and controlled than client-side environments, reducing the risk of access control evasion.
 
-## Key Points
-- **Trusted Enforcement**: Use server-side mechanisms to enforce access controls.
-- **Client-Side Risks**: Client-side enforcement can be easily bypassed or manipulated by attackers.
+### Attack Vectors:
+- **Client-Side Manipulation**: Attackers can use tools like browser developer tools, proxies, or scripts to bypass client-side access control mechanisms, gaining unauthorized access.
+- **Tampering with Requests**: Attackers can intercept and modify network requests between the client and server to bypass access controls, especially if the server does not verify permissions.
+- **Injection Attacks**: By exploiting vulnerabilities in client-side scripts, attackers can inject malicious code to bypass access controls and escalate privileges.
 
-By ensuring that access controls are enforced on trusted server-side components, organizations can protect their applications from unauthorized access and maintain a robust security posture.
+## Practical Example
+To meet this requirement, an organization might:
+- Implement access control checks on the server side, even if similar checks exist on the client side.
+- Use access control gateways or serverless functions to handle all authorization decisions.
+- Ensure that client-side code does not make critical access control decisions but only provides a user interface for the server-side checks.
 
----
-# CWE-602: Client-Side Enforcement of Server-Side Security
-CWE-602 occurs when security decisions are enforced on the client side rather than the server side. This can lead to vulnerabilities because client-side controls can be bypassed or manipulated by attackers.
+For example, in a web application, while the client-side JavaScript may restrict certain actions based on user role, the server must enforce these restrictions by checking the user’s permissions before processing any sensitive requests. This ensures that even if an attacker modifies the client-side code, they cannot bypass the access controls enforced by the server.
 
-[Read more](https://cwe.mitre.org/data/definitions/602.html)
+By ensuring that access control mechanisms are enforced on trusted components, organizations can provide stronger protection against unauthorized access and maintain the integrity of their access control policies.
