--- a/public/docs/asvs/403/V1.6.4.md
+++ b/public/docs/asvs/403/V1.6.4.md
@@ -1,14 +1,29 @@
 *V1.6 Cryptographic Architecture*
 
-# Client-Side Secret Management
+# Client-Side Secret Insecurity
 
-> Ensure that the architecture treats client-side secrets—such as symmetric keys, passwords, or API tokens—as insecure and never uses them to protect or access sensitive data.
+> Verify that the architecture treats client-side secrets—such as symmetric keys, passwords, or API tokens—as insecure and never uses them to protect or access sensitive data.
 
 ## Objective
-To design and implement an architecture that avoids relying on client-side secrets for the protection or access of sensitive data, thereby reducing the risk of exposure and compromise.
+The objective of this requirement is to ensure that sensitive cryptographic operations and data access are never dependent on secrets stored on the client side. Client-side secrets are considered insecure because they can be easily extracted or manipulated by attackers.
 
 ## Rationale
-Client-side secrets are inherently insecure because they can be easily accessed or extracted by attackers. Storing sensitive keys, passwords, or tokens on the client side can lead to significant security breaches if these secrets are intercepted. By ensuring that the architecture does not depend on client-side secrets, and instead uses secure server-side methods for protecting and accessing sensitive data, we mitigate the risks of unauthorized access and data leakage. Integrating this consideration during the architecture, design, and threat modeling phases ensures robust security from the ground up.
+Treating client-side secrets as insecure helps to:
+- **Prevent unauthorized access**: Ensures that sensitive operations are not compromised if client-side secrets are exposed.
+- **Enhance security**: Cryptographic operations and access control should always be handled by trusted server-side components.
+- **Reduce risk**: Client-side environments are inherently less secure, making it essential to avoid reliance on client-side secrets for critical security functions.
 
-## When to Implement
-This requirement should be implemented during the architecture and design phases of any system that involves sensitive data protection. It is particularly crucial for web and mobile applications that may be vulnerable to client-side attacks. This approach should be reinforced during threat modeling and security reviews to ensure that client-side secrets are not relied upon and that appropriate server-side protections are in place.
+### Attack Vectors
+- **Key Extraction**: Attackers can use debugging tools, reverse engineering, or malware to extract keys, passwords, or tokens from client-side applications.
+- **Man-in-the-Middle Attacks**: Intercepting and manipulating client-server communications can expose or alter client-side secrets.
+- **Local Storage Compromise**: Data stored locally on the client device can be accessed or tampered with, leading to unauthorized access to sensitive operations.
+
+## Practical Example
+To meet this requirement, an organization might:
+- Ensure that all cryptographic operations, such as encryption/decryption and signing/verification, are performed on the server side.
+- Use secure communication protocols (e.g., HTTPS) to protect data in transit between the client and server.
+- Avoid storing sensitive data, such as API tokens or encryption keys, on the client side. Instead, use session tokens managed by the server to authenticate and authorize client requests.
+
+For example, a mobile banking application should never store encryption keys or passwords on the client device. Instead, the application should authenticate the user with the server, and the server should handle all sensitive operations, returning only the necessary data to the client over a secure connection.
+
+By treating client-side secrets as insecure, organizations can ensure that sensitive data and operations are protected by the more secure server-side environment, reducing the risk of compromise.
