--- a/public/docs/asvs/403/V2.1.3.md
+++ b/public/docs/asvs/403/V2.1.3.md
@@ -1,43 +1,18 @@
-# No Password Truncation
+*V2.1 Password Security*
+
+# Avoid Password Truncation
 
 > Verify that password truncation is not performed. However, consecutive multiple spaces may be replaced by a single space.
 
 ## Objective
-Ensure that the entire user-provided password is used for authentication, preserving its full complexity and security.
+The primary goal of this requirement is to ensure that passwords are stored and processed in their entirety without truncation. This helps maintain the integrity and strength of user passwords.
 
 ## Rationale
-Password truncation reduces the effective length of the password, diminishing its security. If only a portion of the password is used, it makes the password easier to guess or brute-force. Additionally, truncation can lead to confusion for users who believe they are using a longer, more secure password. Allowing consecutive spaces to be replaced by a single space helps to normalize input without significantly affecting password security.
+Truncating passwords can significantly reduce their strength and effectiveness, making them more vulnerable to attacks. By ensuring that passwords are not truncated, you preserve their intended complexity and security benefits. Allowing multiple consecutive spaces to be replaced by a single space helps standardize password length without compromising security.
 
-**Relationship with Attacks**:
-1. **Brute Force Attacks**: If a password is truncated, the actual length used for authentication is shorter, making it easier for attackers to guess or brute-force the password. For example, if a password is truncated to 8 characters, the number of possible combinations is vastly reduced compared to a longer password.
-2. **Dictionary Attacks**: Truncated passwords may align more closely with common words or phrases found in password dictionaries, increasing the likelihood of successful attacks.
+## What You Should Do
+1. **Avoid Truncation**: Ensure that your application does not truncate passwords at any point during storage, processing, or validation.
+2. **Normalize Spaces**: Replace multiple consecutive spaces with a single space to standardize password lengths and prevent trivial length padding.
 
-## Practical Example
-When a user sets or updates their password, the application should ensure that the entire password, after condensing consecutive spaces, is stored and used for authentication without any truncation.
-
-## Code Example (TypeScript)
-Here is a TypeScript example that demonstrates how to enforce this requirement:
-
-```typescript
-/**
- * Checks if the given password meets the security requirements.
- * @param password - The password to validate.
- * @returns boolean - True if the password meets the requirements, false otherwise.
- */
-function isPasswordValid(password: string): boolean {
-    // Replace multiple consecutive spaces with a single space
-    const condensedPassword = password.replace(/\s+/g, ' ');
-
-    // Ensure the entire condensed password is used without truncation
-    const length = condensedPassword.length;
-    return length >= 12 && length <= 128;
-}
-
-// Example usage
-const password = "this  is  a  secure  password";
-if (isPasswordValid(password)) {
-    console.log("Password is valid.");
-} else {
-    console.log("Password must be between 12 and 128 characters long.");
-}
-```
+## Summary
+By avoiding password truncation and appropriately handling spaces, you ensure the integrity and security of user passwords. This approach helps maintain strong, complex passwords, enhancing the overall security of your application.
