--- a/public/docs/asvs/403/V2.1.6.md
+++ b/public/docs/asvs/403/V2.1.6.md
@@ -1,16 +1,22 @@
+*V2.1 Password Security*
+
 # Password Change Functionality
 
-> Verify that password change functionality requires the user's current password and the new password.
+> Verify that password change functionality requires the user's current and new password.
 
 ## Objective
-Ensure that users can change their password securely by confirming their current password and entering a new password. This helps prevent unauthorized password changes.
+The primary goal of this requirement is to ensure that only the legitimate account holder can change their password. By requiring the user to input their current password along with the new one, you provide an additional layer of security against unauthorized password changes.
 
 ## Rationale
-Requiring the current password for a password change adds an extra layer of security. It ensures that only the legitimate user, who knows the current password, can change the password. This mitigates the risk of unauthorized users changing the password if they gain access to a logged-in session.
+Requiring the current password for a password change helps to:
+- **Verify Identity**: Confirms that the person requesting the change is indeed the account holder.
+- **Prevent Unauthorized Changes**: Deters attackers who may have gained temporary access to a user’s session from changing the password without knowing the current password.
+- **Enhance Security**: Adds an extra step to protect against automated attacks and ensures that the user is aware of the change being made.
 
-1. **Account Takeover**: Without requiring the current password, an attacker who gains access to an authenticated session could change the password and lock out the legitimate user.
-2. **Session Hijacking**: If an attacker hijacks an active session, they could potentially change the password without needing to know the current one. Requiring the current password prevents this.
+## What You Should Do
+1. **Require Current Password**: Implement a mechanism that mandates the input of the current password along with the new password during the password change process.
+2. **Secure the Process**: Ensure that the password change process is conducted over a secure channel (e.g., HTTPS) to protect against eavesdropping and man-in-the-middle attacks.
+3. **Notify Users**: Send notifications to users when their passwords are changed to alert them to any unauthorized changes.
 
-## Practical Example
-When a user requests to change their password, the application should prompt them to enter their current password followed by the new password. This ensures that the request is legitimate.
-
+## Summary
+By requiring users to provide their current password when changing to a new one, you significantly enhance the security of the password change process. This measure helps verify the identity of the user and prevents unauthorized changes, thereby protecting user accounts from potential attacks.
