--- a/public/docs/asvs/403/V2.1.9.md
+++ b/public/docs/asvs/403/V2.1.9.md
@@ -1,48 +1,19 @@
-# No Composition Rules
+*V2.1 Password Security*
 
-> Ensure there are no rules limiting the types of characters in passwords. Do not require specific combinations of upper/lower case letters, numbers, or special characters.
+# No Password Composition Rules
+
+> Verify that there are no password composition rules limiting the type of characters permitted. There should be no requirement for upper or lower case or numbers or special characters.
 
 ## Objective
-Allow users to create passwords with any combination of characters, promoting the use of strong and memorable passwords.
+The primary goal of this requirement is to allow users the flexibility to create passwords using any characters they choose without being restricted by specific composition rules. This promotes the creation of passwords that are both secure and memorable for users.
 
 ## Rationale
-Requiring specific character combinations, such as upper/lower case letters, numbers, or special characters, can lead to predictable patterns. For example, users might create passwords like "Password1!" to meet these requirements, which are easier to guess. Longer passwords or passphrases without such rules are often more secure and memorable. Special characters do not inherently make a password more secure; what matters more is the overall length and unpredictability of the password.
+Imposing strict composition rules on passwords can often lead to predictable patterns, making them easier for attackers to guess. By allowing users to use any combination of characters, including upper case, lower case, numbers, and special characters without specific requirements, users can create more unique and potentially more secure passwords. Additionally, this flexibility helps accommodate a broader range of user preferences and practices.
 
-**Relationship with Attacks**:
-1. **Brute Force Attacks**: Unrestricted character combinations result in more unpredictable passwords, reducing the effectiveness of brute force attacks.
-2. **Password Guessing**: Without composition rules, users avoid predictable patterns, making passwords harder to guess.
-3. **Pattern Recognition**: Attackers often exploit predictable patterns created by composition rules, such as substituting "@" for "a" or "!" for "1", which do not significantly enhance security.
+## What You Should Do
+1. **Remove Composition Rules**: Ensure your application does not enforce specific character requirements, such as mandatory upper case letters, numbers, or special characters.
+2. **Educate Users**: Provide guidance and encourage users to create strong passwords by mixing different types of characters without enforcing strict rules.
+3. **Implement Password Strength Meter**: Use a password strength meter to help users understand the strength of their passwords and make informed choices.
 
-## Code Example (TypeScript)
-
-Here is a TypeScript example that demonstrates a simple password validation without composition rules, focusing on length:
-
-```typescript
-/**
- * Validates if the given password meets the security requirements.
- * @param password - The password to validate.
- * @returns boolean - True if the password is valid, false otherwise.
- */
-function isPasswordValid(password: string): boolean {
-    // Replace multiple consecutive spaces with a single space
-    const condensedPassword = password.replace(/\s+/g, ' ');
-
-    // Check if the password length is within the allowed range
-    const length = condensedPassword.length;
-    return length >= 12 && length <= 128;
-}
-
-// Example usage
-const password = "mysecurepassword";
-if (isPasswordValid(password)) {
-    console.log("Password is valid.");
-} else {
-    console.log("Password must be between 12 and 128 characters long.");
-}
-```
-
-## Key Takeaways
-- Do not enforce specific character combination rules for passwords.
-- Focus on password length and overall complexity for stronger security.
-- Special characters do not inherently make passwords more secure; unpredictability and length are more critical factors.
-- Encourage users to create long, memorable passwords or passphrases without restrictive composition rules.
+### Summary
+By avoiding specific password composition rules, you allow users to create passwords that are both secure and easy for them to remember. This approach helps prevent predictable patterns and encourages the use of a wider variety of characters, enhancing overall password security【109:0†source】.
